--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>hello, world</h1>
         <p>Call me Day.</p>
+        <img src="../website/images/breaching_whale.jpg" alt="Description" />
     </body>
 </html>
+
