--- a/about.html
+++ b/about.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>About</h1>
-      
+      <img src="../website-copy/images/polar_bear.jpg" alt="Polar bear">
     </body>
 </html>
