--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <body>
         <h1>hello, world</h1>
         <p>Call me Day.</p>
-        <img src="../website/images/breaching_whale.jpg" alt="Description" />
+        <a href="https://wwww.flickr.com/photos/28883788@N04/10097824543">
+        
+        <img src= "../website/images/breaching_whale.jpg" alt="breaching_whale">
+        </a>
     </body>
 </html>
 
