Add an alt attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <p>Call me Day.</p>
         <a href="https://wwww.flickr.com/photos/28883788@N04/10097824543">
         
-        <img src= "../website/images/breaching_whale.jpg" alt="breaching_whale">
+        <img src= "../website/images/breaching_whale.jpg" alt=" Whale">
         </a>
     </body>
 </html>
