Add link to tutorial title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>A Whale of a greeting</title>
     </head>
     <body>
         <h1>hello, world</h1>
         <p>Call me Day.</p>
         <a href="https://wwww.flickr.com/photos/28883788@N04/10097824543">
         
-        <img src= "../website/images/breaching_whale.jpg" alt=" Whale">
+        <img src= "../website/images/breaching_whale.jpg" alt="Breaching Whale">
         </a>
     </body>
 </html>
