--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>About</h1>
-      <img src="../website-copy/images/polar_bear.jpg" alt="Polar bear">
+        <p>
+         This site is a sample project for the <strong>awesome</strong> Git tutorial<a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to be Dangerous</em></a>.
+        </p>
     </body>
 </html>
