Add an alt attribute

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <title>A Whale of a greeting</title>
     </head>
     <body>
-        <h1>hello, world</h1>
-        <p>Call me Day.</p>
+        
         <a href="https://wwww.flickr.com/photos/28883788@N04/10097824543">
         
-        <img src= "../website/images/breaching_whale.jpg" alt="Breaching Whale">
+        <img src= "../website/images/breaching_whale.jpg" alt=" Whale">
         </a>
     </body>
 </html>
